# scheduler

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  Tiltfile  mypy.ini  pyproject.toml
.github/workflows/: docker-build.yml  release-chart.yaml
.windsurf/workflows/: bump-chart-version.md
helm/scheduler/: Chart.yaml  values.yaml
helm/scheduler/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  memcached.yaml  secret.yaml  service.yaml
scheduler/: Dockerfile  pyproject.toml
scheduler/scripts/: codegen_regions.py  get_azure_regions.py  test_scheduler.py
scheduler/src/: config.py  main.py
scheduler/src/forecasting/: conversion.py  fetch.py
scheduler/src/modeling/: schedule.py
scheduler/src/regions/: aws.py  azure.py  gcp.py  mapping.json  ovh.py  power_zones.py  provider.py
scheduler/src/routers/: regions.py  schedule.py
scheduler/src/types/: schedule.py
scheduler/src/utils/: logging.py  wattime.py
scripts/: setup-dev.sh
tilt/: utils.Tiltfile
