[project]
name = "scheduler"
version = "0.1.0"
description = "Carbon Aware job scheduler for optimizing workloads based on carbon intensity forecasts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pydantic-settings>=2.9.1",
    "pymemcache>=4.0.0",
    "python-json-logger>=3.3.0",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
